...
  }) : super(key: key);

  @override
  Widget build(BuildContext context) {
    return Center(
      child: Text(
        'It seems like there are no commits yet',
        style: TextStyle(
          fontSize: 18.0,
          color: Colors.grey,
        ),
      ),
    );
...
